# gmpublished

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix
crates/app/: Cargo.toml  build.rs
crates/app/i18n/: de.ftl  de.json  en.ftl  en.json  es.ftl  es.json  fr.ftl  fr.json  kr.ftl  kr.json  nl.ftl  nl.json  pl.ftl  pl.json  pt-BR.ftl  pt-BR.json  ru.ftl  ru.json  tr.ftl  tr.json  uk.ftl  uk.json  zh-cn.ftl  zh-cn.json
crates/app/src/: assets.rs  format.rs  main.rs  net.rs  platform_chrome.rs  platform_menu.rs  test_support.rs
crates/app/src/app/: drag.rs  mod.rs  routes.rs  runners.rs  side_effects_addons.rs  side_effects_audio.rs  side_effects_downloader.rs  side_effects_file_preview.rs  side_effects_preview_gma.rs  side_effects_publish.rs  side_effects_search.rs  side_effects_settings.rs  side_effects_shell.rs  side_effects_size_analyzer.rs  side_effects_steam.rs  side_effects_thumbnails.rs  tests.rs  view_support.rs
crates/app/src/app/side_effects_file_preview/: map_preview.rs  materials.rs  routing.rs  syntax.rs  tests.rs
crates/app/src/backend/: archive.rs  domain.rs  gma.rs  library_watch.rs  materials.rs  metadata_snapshot.rs  native.rs  publish.rs  size_analyzer.rs
crates/app/src/backend/materials/: tests.rs
crates/app/src/backend/tasks/: context.rs  correlation.rs  mod.rs  projections.rs  runtime_events.rs  services.rs  task_events.rs  tests.rs  worker_runtime.rs
crates/app/src/bridge/: archive.rs  domain.rs  gma.rs  library_watch.rs  materials.rs  metadata_snapshot.rs  mod.rs  publish.rs  size_analyzer.rs  ui_error.rs  vpk.rs
crates/app/src/bridge/materials/: tests.rs
crates/app/src/bridge/tasks/: context.rs  correlation.rs  projections.rs  services.rs  tests.rs  worker_runtime.rs
crates/app/src/features/: mod.rs
crates/app/src/features/context_menu/: effect.rs  message.rs  mod.rs  state.rs  update.rs  view.rs
crates/app/src/features/destination_select/: effect.rs  message.rs  mod.rs  model.rs  state.rs  update.rs  view.rs
crates/app/src/features/downloader/: effect.rs  message.rs  mod.rs  model.rs  state.rs  update.rs  view.rs
crates/app/src/features/file_preview/: detail.wgsl  effect.rs  message.rs  mod.rs  model.rs  model_viewer.wgsl  particles.wgsl  particles3d.rs  sky.wgsl  state.rs  update.rs  view.rs  viewer3d.rs  water.wgsl
crates/app/src/features/installed_addons/: effect.rs  message.rs  mod.rs  model.rs  state.rs  update.rs  view.rs
crates/app/src/features/modal_stack/: effect.rs  geometry.rs  message.rs  mod.rs  state.rs  update.rs  view.rs
crates/app/src/features/my_workshop/: effect.rs  message.rs  mod.rs  model.rs  state.rs  update.rs  view.rs
crates/app/src/features/prepare_publish/: effect.rs  message.rs  mod.rs  model.rs  state.rs  update.rs  view.rs
crates/app/src/features/preview_gma/: details.rs  effect.rs  message.rs  mod.rs  model.rs  state.rs  update.rs  view.rs
crates/app/src/features/search/: effect.rs  message.rs  mod.rs  state.rs  update.rs  view.rs
crates/app/src/features/settings/: effect.rs  message.rs  mod.rs  state.rs  update.rs  view.rs
crates/app/src/features/shell/: effect.rs  message.rs  mod.rs  startup.rs  state.rs  subscription.rs  update.rs  view.rs
crates/app/src/features/size_analyzer/: effect.rs  message.rs  mod.rs  state.rs  update.rs  view.rs
crates/app/src/features/steam_session/: effect.rs  message.rs  mod.rs  state.rs  update.rs
crates/app/src/features/tasks_overlay/: effect.rs  message.rs  mod.rs  state.rs  update.rs  view.rs
crates/app/src/i18n/: mod.rs
crates/app/src/media/: backdrop.rs  mod.rs  pixel.rs  size_analyzer_render.rs  sounds.rs  text.rs  text_measure.rs  thumbhash.rs  thumbnail_animation.rs  thumbnail_demand.rs
crates/app/src/media/thumbnail_worker/: decode.rs  disk_cache.rs  gif_preview.rs  mod.rs  thumbnail.rs  thumbnail_key.rs  types.rs
crates/app/src/platform_open/: macos.rs  mod.rs
crates/app/src/theme/: mod.rs  motion.rs  styles.rs  tokens.rs  view_ctx.rs
crates/app/src/util/: channel.rs  convert.rs  fs.rs  mod.rs  paths.rs
crates/app/src/widgets/: addon_card.rs  addon_grid.rs  bbcode.rs  context_area.rs  download_count_icon.rs  file_browser.rs  file_types.rs  forward.rs  grid_rows.rs  mod.rs  scaled.rs  select_option.rs  shortcut_capture.rs  spinner.rs  split_pane.rs  star_rating.rs  tag_chip.rs  tooltip.rs
crates/app/ui/fonts/: NotoSansCJK-ATTRIBUTION.md
crates/backend/: Cargo.toml
crates/backend/src/: addon.rs  appdata.rs  backend.rs  bbcode.rs  cli.rs  discovery_snapshot.rs  error_key.rs  events.rs  lib.rs  logging.rs  particles.rs  rgba_image.rs  search.rs
crates/backend/src/appdata/: tests.rs
crates/backend/src/gma/: extract.rs  mod.rs  read.rs  whitelist.rs  write.rs
crates/backend/src/particles/: compiler.rs
crates/backend/src/scene/: map.rs  mod.rs  model.rs  pcf.rs
crates/backend/src/search/: tests.rs
crates/backend/src/steam/: downloads.rs  mod.rs  publishing.rs  runtime.rs  subscriptions.rs  users.rs  workshop.rs
crates/backend/src/transactions/: mod.rs  payload.rs
crates/backend/src/util/: macros.rs  mod.rs  path.rs  stream.rs
crates/backend/src/vpk/: mod.rs  tests.rs
crates/backend/tests/: gma_parity.rs
crates/vformats/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/vformats/src/: crc32.rs  entry_path.rs  gma.rs  keyvalues.rs  lib.rs  limits.rs  math.rs  phy.rs  reader.rs  sink.rs  soundscript.rs  vmt.rs  vpk.rs  vtf.rs  vtf_tests.rs
crates/vformats/src/bsp/: game_lump.rs  inflate.rs  lumps.rs  mod.rs  record.rs  vis.rs  zip.rs
crates/vformats/src/mdl/: assembly.rs  assembly_tests.rs  mod.rs  studio.rs  vtx.rs  vvd.rs
crates/vformats/tests/: bsp.rs  bsp_adversarial.rs  bsp_deflate.rs  bsp_game.rs  bsp_lumps.rs  gma.rs  mdl_assembly.rs  mdl_studio.rs  mdl_vtx.rs  mdl_vvd.rs  phy_fixtures_drift.rs  phy_fuzz.rs  phy_synthetic.rs  vpk.rs
crates/vformats/tests/fixtures/: gradient_16x8_dxt5.vtf  gradient_16x8_rgb888.vtf  gradient_16x8_rgba8888.vtf  gradient_32x16_dxt5.vtf  tetra.phy
crates/vformats/tests/phy_common/: mod.rs
crates/vformats/tests/phy_wild_common/: mod.rs
(+47 files in other folders)
