[package]
name = "gmpublished-backend"
description = "Upstream-aligned backend for gmpublished."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "gmpublished_backend"
path = "src/lib.rs"

[features]
# Gates `scene` (BSP map preview decoding) and its tests. No
# longer needs an optional dependency: the BSP path runs on `vformats`,
# which is always available.
scene = []

[dependencies]
vformats.workspace = true
# Read-only maps of GMA archives (never fully loaded; addons reach GBs).
memmap2 = "0.9"
arc-swap.workspace = true
bytemuck.workspace = true
clap = "4.6"
crc32fast.workspace = true
dirs.workspace = true
dunce = "1.0.5"
image = { workspace = true, features = ["gif"] }
log.workspace = true
lzma-rust2.workspace = true
nucleo-matcher.workspace = true
opener.workspace = true
parking_lot.workspace = true
path-slash = "0.2"
rayon.workspace = true
regex-lite = "0.1"
serde = { workspace = true, features = ["rc"] }
serde_json = { workspace = true, features = ["std"] }
steamlocate.workspace = true
steamworks = { version = "0.13.1", features = ["serde"] }
tempfile.workspace = true
thiserror.workspace = true
trash.workspace = true
ureq.workspace = true
walkdir.workspace = true

[dev-dependencies]
# Encoder only: builds synthetic VTF fuzz seeds.
vtf.workspace = true
# The encoder feature is only needed to build LZMA-alone test fixtures.
lzma-rust2 = { workspace = true, features = ["encoder"] }
steamworks-sys = "0.13.0"
tempfile.workspace = true

[lints]
workspace = true
